@@ -1,5 +1,6 @@
 /*************************************************************************
- * Copyright (c) 2021 The Eclipse Foundation and others.
+ * Copyright (c) 2021, 2022 The Eclipse Foundation and others.
+ * Copyright (c) 2021 Oleksandr Andriienko
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -13,7 +14,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.URI;
-import java.net.URL;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpRequest.BodyPublishers;
@@ -21,31 +21,56 @@ import java.net.http.HttpResponse;
 import java.net.http.HttpResponse.BodyHandlers;
 import java.nio.charset.StandardCharsets;
 import java.time.Duration;
+import java.util.Collections;
+import java.util.Map;
+import java.util.Optional;
 import java.util.function.Consumer;
 
-import org.eclipse.dash.licenses.context.IContext;
+import jakarta.inject.Inject;
+import jakarta.inject.Provider;
+
+import org.eclipse.dash.licenses.IProxySettings;
+import org.eclipse.dash.licenses.ISettings;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class HttpClientService implements IHttpClientService {
+	final Logger logger = LoggerFactory.getLogger(HttpClientService.class);
 
-	private IContext context;
+	final static int MAX_TRIES = 10;
 
-	public HttpClientService(IContext context) {
-		this.context = context;
-	}
+	@Inject
+	ISettings settings;
+
+	/** Optional HTTP proxy settings. */
+	@Inject
+	Provider<IProxySettings> proxySettings;
 
 	@Override
 	public int post(String url, String contentType, String payload, Consumer<String> handler) {
 		try {
-			Duration timeout = Duration.ofSeconds(context.getSettings().getTimeout());
-			HttpRequest request = HttpRequest.newBuilder(URI.create(url)).header("Content-Type", contentType)
-					.POST(BodyPublishers.ofString(payload, StandardCharsets.UTF_8)).timeout(timeout).build();
+			var tries = 0;
+			while (true) {
+				Duration timeout = Duration.ofSeconds(settings.getTimeout());
+				HttpRequest request = HttpRequest
+						.newBuilder(URI.create(url))
+						.header("Content-Type", contentType)
+						.POST(BodyPublishers.ofString(payload, StandardCharsets.UTF_8))
+						.timeout(timeout)
+						.build();
 
-			HttpClient httpClient = HttpClient.newBuilder().connectTimeout(timeout).build();
-			HttpResponse<String> response = httpClient.send(request, BodyHandlers.ofString());
-			if (response.statusCode() == 200) {
-				handler.accept(response.body());
+				HttpClient httpClient = getHttpClient(timeout);
+				HttpResponse<String> response = httpClient.send(request, BodyHandlers.ofString());
+				if (response.statusCode() == 502 && tries++ < MAX_TRIES) {
+					logger.info("HTTP response 502 (Bad Gateway). Trying again...");
+					Thread.sleep(1000 * tries);
+					continue;
+				}
+				if (response.statusCode() == 200) {
+					handler.accept(response.body());
+				}
+				return response.statusCode();
 			}
-			return response.statusCode();
 		} catch (IOException | InterruptedException e) {
 			throw new RuntimeException(e);
 		}
@@ -54,9 +79,16 @@ public class HttpClientService implements IHttpClientService {
 	@Override
 	public boolean remoteFileExists(String url) {
 		try {
-			HttpURLConnection connection = (HttpURLConnection) new URL(url).openConnection();
-			connection.setRequestMethod("HEAD");
-			return (connection.getResponseCode() == HttpURLConnection.HTTP_OK);
+			HttpRequest.Builder reqBuilder = HttpRequest
+					.newBuilder(URI.create(url))
+					.method("HEAD", HttpRequest.BodyPublishers.noBody());
+
+			Duration timeout = Duration.ofSeconds(settings.getTimeout());
+			HttpRequest request = reqBuilder.timeout(timeout).build();
+
+			HttpClient httpClient = getHttpClient(timeout);
+			HttpResponse<Void> response = httpClient.send(request, BodyHandlers.discarding());
+			return (response.statusCode() < HttpURLConnection.HTTP_BAD_REQUEST);
 		} catch (Exception e) {
 			return false;
 		}
@@ -64,19 +96,51 @@ public class HttpClientService implements IHttpClientService {
 
 	@Override
 	public int get(String url, String contentType, Consumer<InputStream> handler) {
-		try {
-			Duration timeout = Duration.ofSeconds(context.getSettings().getTimeout());
-			HttpRequest request = HttpRequest.newBuilder(URI.create(url)).header("Content-Type", contentType).GET()
-					.timeout(timeout).build();
+		return get(url, contentType, Collections.emptyMap(), handler);
+	}
 
-			HttpClient httpClient = HttpClient.newBuilder().connectTimeout(timeout).build();
-			HttpResponse<InputStream> response = httpClient.send(request, BodyHandlers.ofInputStream());
-			if (response.statusCode() == 200) {
-				handler.accept(response.body());
+	@Override
+	public int get(String url, String contentType, Map<String, String> headers, Consumer<InputStream> handler) {
+		try {
+			var tries = 0;
+			while (true) {
+				HttpRequest.Builder reqBuilder = HttpRequest
+						.newBuilder(URI.create(url))
+						.header("Content-Type", contentType)
+						.GET();
+
+				headers.forEach((key, value) -> reqBuilder.header(key, value));
+
+				Duration timeout = Duration.ofSeconds(settings.getTimeout());
+				HttpRequest request = reqBuilder.timeout(timeout).build();
+
+				HttpClient httpClient = getHttpClient(timeout);
+
+				HttpResponse<InputStream> response = httpClient.send(request, BodyHandlers.ofInputStream());
+				if (response.statusCode() == 502 && tries++ < MAX_TRIES) {
+					logger.info("HTTP response 502 (Bad Gateway). Trying again...");
+					Thread.sleep(1000 * tries);
+					continue;
+				}
+				if (response.statusCode() == 200) {
+					handler.accept(response.body());
+				}
+				return response.statusCode();
 			}
-			return response.statusCode();
 		} catch (IOException | InterruptedException e) {
 			throw new RuntimeException(e);
 		}
+	}
+
+	protected HttpClient getHttpClient(Duration timeout) {
+		HttpClient.Builder builder = HttpClient
+				.newBuilder()
+				.connectTimeout(timeout)
+				.followRedirects(HttpClient.Redirect.ALWAYS);
+
+		// Configure proxy, if any
+		Optional.ofNullable(this.proxySettings.get()).ifPresent(proxySettings -> proxySettings.configure(builder));
+
+		return builder.build();
 	}
 }
